--- a/Frontend/src/styles/Home.css
+++ b/Frontend/src/styles/Home.css
@@ -69,6 +69,12 @@
     color: black;
 }
 
+.sidebar li.active {
+    background-color: var(--accent-color);
+    color: black;
+    font-weight: 600;
+}
+
 .chat-container {
     flex-grow: 1;
     display: flex;
